fix layout resize

--- a/mobile-client/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/mobile-client/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">mobileclient</string>
-    <string name="main_activity_title">mobileclient</string>
+    <string name="app_name">MobileClient</string>
+    <string name="main_activity_title">MobileClient</string>
 </resources>
